<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterOwnerProperty">

    <ScrollView
        android:id="@+id/reg_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/register_your_property"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </android.support.design.circularreveal.cardview.CircularRevealCardView>

            <android.support.design.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/name"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@color/white"
                            android:hint="@string/anil"
                            android:inputType="textPersonName"
                            android:padding="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/address"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@color/white"
                            android:hint="@string/khandari_agra"
                            android:inputType="textPostalAddress"
                            android:padding="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/phone_no"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/field_phone_number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@color/white"
                            android:hint="@string/_9876543210"
                            android:inputType="phone"
                            android:padding="5dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/email_id"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@color/white"
                            android:hint="@string/username_abc_com"
                            android:inputType="textEmailAddress"
                            android:padding="5dp" />
                    </LinearLayout>


                </LinearLayout>

            </android.support.design.circularreveal.cardview.CircularRevealCardView>

            <android.support.design.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/type_of_space"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/type_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_1_bhk"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_2_bhk_or_above"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hostel"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pg"
                            android:textColor="@color/white" />
                    </RadioGroup>
                </LinearLayout>

            </android.support.design.circularreveal.cardview.CircularRevealCardView>

            <android.support.design.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/facilities"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/facilities_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fully_furnished"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/semi_furnished"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/unfurnished"
                            android:textColor="@color/white" />
                    </RadioGroup>
                </LinearLayout>
            </android.support.design.circularreveal.cardview.CircularRevealCardView>

            <android.support.design.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tenant_type"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/tenant_type_radio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/family"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bachelor"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/both"
                            android:textColor="@color/white" />
                    </RadioGroup>
                </LinearLayout>
            </android.support.design.circularreveal.cardview.CircularRevealCardView>

            <android.support.design.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:id="@+id/imageViews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/addMessageImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/add_img" />
                </LinearLayout>
            </android.support.design.circularreveal.cardview.CircularRevealCardView>

            <android.support.design.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/expected_rent"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/rent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:hint="@string/_5000"
                        android:inputType="number"
                        android:padding="5dp" />
                </LinearLayout>
            </android.support.design.circularreveal.cardview.CircularRevealCardView>

            <Button
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClick"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>