<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Design.NoActionBar"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_main"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/owner"
            android:onClick="onClick"
            android:text="@string/owner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/tenant"
            android:onClick="onClick"
            android:text="@string/tenant"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/service_provider"
            android:onClick="onClick"
            android:text="@string/service_provider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/ButtonStyle" />
    </LinearLayout>

</LinearLayout>